--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -307,62 +307,53 @@
         const erro = document.getElementById('erro');
         if (!tbody || !loadingSpinner || !erro) {
           console.error('Elementos DOM não encontrados:', { tbody, loadingSpinner, erro });
+          erro.textContent = 'Erro: Elementos da página não encontrados.';
           return;
         }
 
         loadingSpinner.style.display = 'block';
         tbody.innerHTML = '<tr><td colspan="8" style="text-align:center;">Carregando...</td></tr>';
-        if (erro) erro.textContent = '';
+        erro.textContent = '';
 
-        const maxRetries = 3;
-        let attempt = 1;
-        while (attempt <= maxRetries) {
-          try {
-            console.log(`Tentativa ${attempt}: Carregando produtos de https://centrodecompra-backend.onrender.com/api/produtos?page=${currentPage}&limit=${produtosPorPagina}`);
-            const controller = new AbortController();
-            const timeoutId = setTimeout(() => controller.abort(), 5000);
-            const res = await fetch(`https://centrodecompra-backend.onrender.com/api/produtos?page=${currentPage}&limit=${produtosPorPagina}`, {
-              cache: 'no-store',
-              signal: controller.signal,
-              headers: {
-                'Content-Type': 'application/json'
-              }
-            });
-            clearTimeout(timeoutId);
-
-            console.log('Status da resposta:', res.status, res.statusText);
-            const data = await res.json();
-            console.log('Dados recebidos:', JSON.stringify(data, null, 2));
-
-            if (!res.ok) {
-              throw new Error(data.error || `Erro ${res.status}: Falha ao buscar produtos`);
+        try {
+          console.log(`Carregando produtos: https://centrodecompra-backend.onrender.com/api/produtos?page=${currentPage}&limit=${produtosPorPagina}`);
+          const controller = new AbortController();
+          const timeoutId = setTimeout(() => controller.abort(), 5000);
+          const res = await fetch(`https://centrodecompra-backend.onrender.com/api/produtos?page=${currentPage}&limit=${produtosPorPagina}`, {
+            cache: 'no-store',
+            signal: controller.signal,
+            headers: {
+              'Content-Type': 'application/json'
             }
+          });
+          clearTimeout(timeoutId);
 
-            const produtos = Array.isArray(data.produtos) ? data.produtos : Array.isArray(data) ? data : [];
-            totalProdutos = Number.isInteger(data.total) ? data.total : produtos.length;
-            console.log('Produtos processados:', produtos, 'Total:', totalProdutos);
+          console.log('Status da resposta:', res.status, res.statusText);
+          const data = await res.json();
+          console.log('Dados recebidos:', JSON.stringify(data, null, 2));
 
-            preencherTabela(produtos);
-            atualizarPaginacao();
-            loadingSpinner.style.display = 'none';
-            return;
-          } catch (err) {
-            console.error(`Tentativa ${attempt} falhou: ${err.message}`);
-            if (attempt === maxRetries) {
-              let errorMessage = `Erro após ${maxRetries} tentativas: ${err.message}`;
-              if (err.name === 'AbortError') {
-                errorMessage = 'Tempo limite excedido ao conectar ao servidor.';
-              } else if (err.message.includes('Failed to fetch')) {
-                errorMessage = 'Erro de conexão com o servidor. Verifique sua rede ou a API.';
-              }
-              tbody.innerHTML = `<tr><td colspan="8" style="color:red;text-align:center;">${errorMessage}</td></tr>`;
-              if (erro) erro.textContent = errorMessage;
-            }
-            attempt++;
-            await new Promise(resolve => setTimeout(resolve, 1000 * attempt));
-          } finally {
-            if (loadingSpinner) loadingSpinner.style.display = 'none';
+          if (!res.ok) {
+            throw new Error(data.error || `Erro ${res.status}: Falha ao buscar produtos`);
           }
+
+          const produtos = Array.isArray(data.produtos) ? data.produtos : Array.isArray(data) ? data : [];
+          totalProdutos = Number.isInteger(data.total) ? data.total : produtos.length;
+          console.log('Produtos processados:', produtos, 'Total:', totalProdutos);
+
+          preencherTabela(produtos);
+          atualizarPaginacao();
+        } catch (err) {
+          console.error('Erro ao carregar produtos:', err.message);
+          let errorMessage = err.message;
+          if (err.name === 'AbortError') {
+            errorMessage = 'Tempo limite excedido ao conectar ao servidor.';
+          } else if (err.message.includes('Failed to fetch')) {
+            errorMessage = 'Erro de conexão com o servidor. Verifique sua rede ou a API.';
+          }
+          tbody.innerHTML = `<tr><td colspan="8" style="color:red;text-align:center;">${errorMessage}</td></tr>`;
+          erro.textContent = errorMessage;
+        } finally {
+          loadingSpinner.style.display = 'none';
         }
       }
 
@@ -412,41 +403,51 @@
       async function editarProduto(id) {
         const erro = document.getElementById('erro');
         const mensagem = document.getElementById('mensagem');
+        const form = document.getElementById('form-produto');
+        if (!form || !erro || !mensagem) {
+          console.error('Elementos DOM não encontrados:', { form, erro, mensagem });
+          erro.textContent = 'Erro: Elementos do formulário não encontrados.';
+          return;
+        }
+
         try {
-          console.log('Buscando produto para edição:', id);
+          console.log('Buscando produto para edição, ID:', id);
           const res = await fetch(`https://centrodecompra-backend.onrender.com/api/produtos/${id}`, {
+            method: 'GET',
             headers: {
               'Content-Type': 'application/json'
             }
           });
           console.log('Status da resposta (editar):', res.status, res.statusText);
           const data = await res.json();
-          console.log('Dados do produto para edição:', data);
+          console.log('Dados do produto para edição:', JSON.stringify(data, null, 2));
 
           if (!res.ok) {
-            throw new Error(data.error || 'Erro ao buscar produto para edição');
+            throw new Error(data.error || `Erro ${res.status}: Produto não encontrado`);
           }
 
-          document.getElementById('produto-id').value = data._id || '';
-          document.getElementById('form-produto').nome.value = data.nome || '';
-          document.getElementById('form-produto').descricao.value = data.descricao || '';
-          document.getElementById('form-produto').categoria.value = data.categoria || '';
-          document.getElementById('form-produto').loja.value = data.loja || '';
-          document.getElementById('form-produto').link.value = data.link || '';
-          document.getElementById('form-produto').preco.value = data.preco || '';
+          // Preencher o formulário
+          form.querySelector('[name="id"]').value = data._id || '';
+          form.querySelector('[name="nome"]').value = data.nome || '';
+          form.querySelector('[name="descricao"]').value = data.descricao || '';
+          form.querySelector('[name="categoria"]').value = data.categoria || '';
+          form.querySelector('[name="loja"]').value = data.loja || '';
+          form.querySelector('[name="link"]').value = data.link || '';
+          form.querySelector('[name="preco"]').value = data.preco || '';
           document.getElementById('submit-button').textContent = 'Salvar Alterações';
           document.getElementById('cancel-button').style.display = 'inline-block';
-          if (mensagem) mensagem.textContent = 'Editando produto. Envie para salvar as alterações.';
+          mensagem.textContent = 'Editando produto. Envie para salvar as alterações.';
         } catch (err) {
-          console.error('Erro ao editar produto:', err);
-          if (erro) erro.textContent = err.message;
+          console.error('Erro ao editar produto:', err.message);
+          erro.textContent = err.message;
         }
       }
 
       function cancelarEdicao() {
         const mensagem = document.getElementById('mensagem');
         const erro = document.getElementById('erro');
-        document.getElementById('form-produto').reset();
+        const form = document.getElementById('form-produto');
+        if (form) form.reset();
         document.getElementById('produto-id').value = '';
         document.getElementById('submit-button').textContent = 'Adicionar';
         document.getElementById('cancel-button').style.display = 'none';
@@ -459,7 +460,7 @@
         const mensagem = document.getElementById('mensagem');
         const erro = document.getElementById('erro');
         try {
-          console.log('Excluindo produto:', id);
+          console.log('Excluindo produto, ID:', id);
           const res = await fetch(`https://centrodecompra-backend.onrender.com/api/produtos/${id}`, {
             method: 'DELETE',
             headers: {
@@ -468,17 +469,17 @@
           });
           console.log('Status da resposta (excluir):', res.status, res.statusText);
           const data = await res.json();
-          console.log('Resposta da exclusão:', data);
+          console.log('Resposta da exclusão:', JSON.stringify(data, null, 2));
 
           if (!res.ok) {
-            throw new Error(data.error || 'Erro ao excluir produto');
+            throw new Error(data.error || `Erro ${res.status}: Erro ao excluir produto`);
           }
 
-          if (mensagem) mensagem.textContent = 'Produto excluído com sucesso';
+          mensagem.textContent = 'Produto excluído com sucesso';
           carregarProdutos();
         } catch (err) {
-          console.error('Erro ao excluir produto:', err);
-          if (erro) erro.textContent = err.message;
+          console.error('Erro ao excluir produto:', err.message);
+          erro.textContent = err.message;
         }
       }
 
@@ -493,26 +494,28 @@
         const erro = document.getElementById('erro');
 
         if (!link.match(/^https?:\/\/.+/)) {
-          if (erro) erro.textContent = 'Link inválido! Deve começar com http:// ou https://';
+          erro.textContent = 'Link inválido! Deve começar com http:// ou https://';
           return;
         }
         if (isNaN(preco) || preco <= 0) {
-          if (erro) erro.textContent = 'O preço deve ser maior que zero!';
+          erro.textContent = 'O preço deve ser maior que zero!';
           return;
         }
 
-        if (mensagem) mensagem.textContent = '';
-        if (erro) erro.textContent = '';
+        mensagem.textContent = '';
+        erro.textContent = '';
 
         try {
-          console.log(`${produtoId ? 'Atualizando' : 'Adicionando'} produto`);
+          console.log(`${produtoId ? 'Atualizando' : 'Adicionando'} produto, ID:`, produtoId || 'novo');
           let res;
           if (produtoId) {
+            console.log('Enviando PUT para:', `https://centrodecompra-backend.onrender.com/api/produtos/${produtoId}`);
             res = await fetch(`https://centrodecompra-backend.onrender.com/api/produtos/${produtoId}`, {
               method: 'PUT',
               body: formData
             });
           } else {
+            console.log('Enviando POST para:', `https://centrodecompra-backend.onrender.com/api/produtos`);
             res = await fetch(`https://centrodecompra-backend.onrender.com/api/produtos`, {
               method: 'POST',
               body: formData
@@ -520,21 +523,21 @@
           }
 
           const responseData = await res.json();
-          console.log(`Resposta do ${produtoId ? 'PUT' : 'POST'}:`, responseData);
+          console.log(`Resposta do ${produtoId ? 'PUT' : 'POST'}:`, JSON.stringify(responseData, null, 2));
 
           if (!res.ok) {
-            throw new Error(responseData.error || `Erro ao ${produtoId ? 'atualizar' : 'adicionar'} produto`);
+            throw new Error(responseData.error || `Erro ${res.status}: Erro ao ${produtoId ? 'atualizar' : 'adicionar'} produto`);
           }
 
-          if (mensagem) mensagem.textContent = produtoId ? 'Produto atualizado com sucesso!' : 'Produto adicionado com sucesso!';
+          mensagem.textContent = produtoId ? 'Produto atualizado com sucesso!' : 'Produto adicionado com sucesso!';
           form.reset();
           document.getElementById('produto-id').value = '';
           document.getElementById('submit-button').textContent = 'Adicionar';
           document.getElementById('cancel-button').style.display = 'none';
           carregarProdutos();
         } catch (error) {
-          console.error('Erro ao processar produto:', error);
-          if (erro) erro.textContent = error.message;
+          console.error('Erro ao processar produto:', error.message);
+          erro.textContent = error.message;
         }
       });
 
